<resources>
    <string name="app_name">Restaurant</string>
    <string name="acceder_menu">Accéder au menu</string>
    <string name="menu">Menu</string>
    <string name="entree">Entrées</string>
    <string name="plats">Plats</string>
    <string name="voir">Voir</string>
    <string name="desserts">Desserts</string>
    <string name="ile_flottante">Île flottante</string>
    <string name="salade_chevre">Salade de chèvre</string>
    <string name="boeuf_bourguignon">Boeuf bourguignon</string>
    <string name="ingredients">Ingrédients</string>
    <string name="ingredients_salade_chevre">Salade\nCrudités\nChèvre chaud</string>
    <string name="preparation">Temps de préparation estimé</string>
    <string name="dix_minutes">10 minutes</string>
    <string name="cinq_minutes">5 minutes</string>
    <string name="back">Retour</string>
    <string name="acceder_stream">Accéder au live</string>
    <string name="saumon_airelles">Saumon aux airelles</string>
    <string name="poulet_roti">Poulet rôti</string>
    <string name="mousse_chocolat">Mousse au chocolat</string>
    <string name="tarte_poireaux">Tarte aux poireaux</string>
    <string name="oeufs_mimosa">Oeufs mimosa</string>
    <string name="ingredients_ile">Crème anglaise\nOeufs en neige\nCaramel</string>
    <string name="ingredients_poulet_roti">Poulet rôti\nFrites\nOignons</string>
    <string name="ingredients_oeufs">Oeufs\nMayonnaise\nCiboulette</string>
</resources>
