<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#444444"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/back"
            android:src="@android:drawable/ic_menu_revert" />
        <TextView
            android:id="@+id/salade_chevre_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/salade_chevre" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/chevre_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:maxHeight="250dp"
            android:maxWidth="250dp"
            android:scaleType="fitCenter"
            android:src="@drawable/salade_chevre" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ingredients1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ingredients" />

            <TextView
                android:id="@+id/list_ingredients1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine"
                android:text="@string/ingredients_salade_chevre"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/preparation1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/preparation" />

            <TextView
                android:id="@+id/temps1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dix_minutes"
                android:textColor="@color/black" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>